# SparkGC

./: CMakeLists.txt  README.md
cmake/: cmake-config.h.in  helper.cmake
docs/: HeapManagement.md
examples/SimpleVM/: CMakeLists.txt  README.md  main.cpp
examples/tiny-vm/: README.md
examples/tiny-vm/include/vm/: allocator.hpp  bytestream.hpp  core.hpp  exception.hpp  instructions.hpp  memory.hpp  vm.hpp
examples/tiny-vm/test/: gen_elf.cpp  main.cpp  run_elf.cpp
include/spark/: CollectedHeap.h  CollectedObject.h  ColorBitmap.h  SparkGC.h  SparkGC_All.h  SparkGC_Shared.h  SparkMutator.h  gc_shared.h  mutator.h  object.h  types.h
include/spark/arch/aarch64/: atomic.h
include/spark/arch/arm/: atomic.h
include/spark/arch/x86/: atomic.h
include/spark/arch/x86_64/: atomic.h
src/spark/: CollectedHeap.cpp  CollectedObject.cpp  SparkGC.cpp  SparkMutator.cpp  dummy.cpp
test/: test-align.cpp  test-allocate-large-super.cpp  test-allocate-small-medium.cpp  test-color-bit.cpp  test-create-block-tree.cpp  test-gc-allocate.cpp
